<resources>
    <string name="app_name">Nirmaan</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="feedback">Feedback</string>
    <string name="sign_out">Sign Out</string>
    <string name="gb_baas">GB BAAS</string>
    <string name="gb_cb">PKP</string>
    <string name="sap">SAP</string>
    <string name="pcd">PCD</string>
    <string name="sko">SKO</string>
    <string name="utkarsh">UTKARSH</string>
    <string name="disha">DISHA</string>
    <string name="unnati_1">UNNATI 1</string>
    <string name="unnati_2">UNNATI 2</string>
    <string name="home">Home</string>
    <string name="projects">Projects</string>
    <string name="gallery">Gallery</string>
    <string name="contact">Contact</string>
    <string name="updating">No Internet Detected</string>
    <string name="send">Send</string>
    <string name="description"> Description</string>
    <string name="Attendance">Attendance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="youth">YOUTH</string>
    <string name="all_nirmaan">ALL NIRMAAN</string>


</resources>
