<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >





    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/all_nirmaan"
                android:layout_width="match_parent"
                android:layout_height="80dp"

                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle2"
                android:elevation="100dp"
                android:gravity="center"
                android:text="@string/all_nirmaan"
                android:textColor="#ffffff"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/gbbs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:background="@drawable/rectangle2"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:text="@string/gb_baas"
                    android:textColor="#ffffff"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/gbcb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle2"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:text="@string/gb_cb"
                    android:textColor="#ffffff"

                    android:textSize="28sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/sap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle2"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:text="@string/sap"
                    android:textColor="#ffffff"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/pcd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pcd"
                    android:textColor="#ffffff"
                    android:background="@drawable/rectangle2"
                    android:textSize="28sp"
                    android:elevation="100dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    />

               </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/sko"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sko"
                android:textColor="#ffffff"
                android:background="@drawable/rectangle2"
                android:textSize="28sp"
                android:elevation="100dp"
                android:gravity="center"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/utkarsh"
                android:textColor="#ffffff"
                android:background="@drawable/rectangle2"
                android:textSize="28sp"
                android:elevation="100dp"
                android:gravity="center"
                android:id="@+id/utkarsh"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/disha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/disha"
                android:textColor="#ffffff"
                android:background="@drawable/rectangle2"
                android:textSize="28sp"
                android:elevation="100dp"
                android:gravity="center"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/un1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/unnati_1"
                android:textColor="#ffffff"
                android:background="@drawable/rectangle2"
                android:textSize="28sp"
                android:elevation="100dp"
                android:gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/un2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/unnati_2"
                android:textColor="#ffffff"
                android:background="@drawable/rectangle2"
                android:textSize="28sp"
                android:elevation="100dp"
                android:gravity="center"
                android:layout_weight="1"

                />
            <TextView
                android:id="@+id/youth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/youth"
                android:textColor="#ffffff"
                android:background="@drawable/rectangle2"
                android:textSize="28sp"
                android:elevation="100dp"
                android:gravity="center"
                android:layout_weight="1"

                />
        </LinearLayout>

        </LinearLayout>


    </ScrollView>
</RelativeLayout>

